--- a/src/public/intro.html
+++ b/src/public/intro.html
@@ -10,7 +10,7 @@
     I was a person my classmates often went to for help.
   </p>
   <details>
-    <summary>More about me</summary>
+    <summary style="cursor: pointer;">More about me</summary>
     <p>
       originally from Bangued, Abra.
     </p>
