more presence stuff

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -255,10 +255,10 @@
           </div>
           <div>
             <h4>Monitor Me</h4>
-            <div class="item-list">
+            <a class="item-list" href="/presence.html" target="_blank">
               <p id="main-status">status: ?</p>
               <p id="main-last-seen">last seen: ?</p>
-            </div>
+            </a>
           </div>
         </div>
         <div class="footer-bottom">
